css/style.css
/* ... */
.img-thumbnail {
  padding: 0.25rem;
  border: 1px solid #dee2e6;
  background-color: #fff;
}

.section {
  position: relative;
  padding: 8.125rem 0;
}

@media (min-width: 768px) {
  .section {
    padding: 4.5rem 0;
  }
}
.section-top {
  padding-top: 8.125rem;
}

.section-bottom {
  padding-bottom: 8.125rem;
}

@media (min-width: 768px) {
  .section-top {
    padding-top: 10.3125rem;
  }
}
.bg-grey {
  background: #f4f7fc;
}

/*-------------------
  BUTTONS STYLE
----------------=----*/
.btn {
  font-size: 0.6875rem;
  font-weight: 700;
  position: relative;
  text-transform: uppercase;
  padding: 1rem 2.4rem;
  border: 0.1rem solid transparent;
  transition: all 0.2s ease-in-out;
  letter-spacing: 0.5px;
}

.btn-primary-border {
  border-radius: 8px;
  border: 3px solid #30ab89;
  font-size: 0.875rem;
}

.btn-circle {
  display: inline-flex;
  width: 4.20313rem !important;
  height: 4.20313rem !important;
  padding: 0 !important;
  border-radius: 50%;
  align-items: center;
  justify-content: center;
}

.btn-outline-dark {
  border: 1px solid #222;
}

.btn-white {
  background: #fff;
  color: #212529;
}

.btn-trans-white {
  border: 1px solid #fff;
  color: #fff;
}
.btn-trans-white:hover {
  color: #fff;
  opacity: 0.5;
}

.btn-outline-dark:hover {
  background: #222 !important;
  color: #fff !important;
}

.btn.btn-link {
  color: #212529;
}

.btn:focus {
  box-shadow: none !important;
}

.btn-circled {
  border-radius: 75px;
}

.bg-primary,
.btn-primary,
.btn-white:hover {
  background: #21c87a !important;
  border-color: #21c87a !important;
  color: #fff;
}

.bg-dark,
.btn-primary:hover {
  background: #232323 !important;
  border-color: #232323 !important;
  color: #fff;
}

.shadow-sm-2 {
  box-shadow: 0 7px 22px rgba(0, 0, 0, 0.08);
}

/*------------------------
 BACKGROUND
----------------------------*/
.bg-cover {
  background-repeat: no-repeat;
  background-position: 50%;
  background-size: cover;
}

.bg-cover,
.bg-overlay,
.bg-overlay:before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.bg-overlay:before {
  content: "";
  opacity: 0.55;
  background-color: #212529;
}

.box-shadow {
  box-shadow: 0 25px 100px -5px rgba(0, 0, 0, 0.15);
}

.mt50 {
  margin-top: 80px;
}

.mt30 {
  margin-top: 30px;
}

.mb-30 {
  margin-bottom: 30px;
}

.bg-primary {
  background: #21c87a !important;
}

a {
  color: #21c87a;
  transition: 0.3s;
}

a:hover,
a:focus {
  outline: none;
  text-decoration: none;
  color: #1a9c5f;
}

.disabled-text {
  color: rgba(255, 255, 255, 0.8) !important;
  cursor: not-allowed;
}

.logo {
  width: 100%;
  height: 100%;
}

.luminous-blend {
  mix-blend-mode: luminosity !important;
}

.bg-home {
  background: url("/images/bg/background.png");
  background-position: center;
  background-size: cover;
  padding-top: 7rem;
}
@media (max-width: 991px) {
  .bg-home {
    padding-top: 2rem;
  }
}

.seed-section {
  padding: 92px 0;
}
@media (max-width: 991px) {
  .seed-section {
    padding: 48px 0;
  }
}

.bg-home .seed-container {
  max-height: 494px;
  overflow: hidden;
}
@media (max-width: 991px) {
  .bg-home .seed-container {
    max-height: none;
  }
}

.seed-container {
  padding: 0 80px;
  width: 100%;
}
@media (max-width: 1400px) {
  .seed-container {
    padding: 0 72px;
    width: 100%;
  }
}
@media (max-width: 1200px) {
  .seed-container {
    padding: 0 50px;
    width: 100%;
  }
}
@media (max-width: 767px) {
  .seed-container {
    padding: 0 42px;
    width: 100%;
  }
}
@media (max-width: 575px) {
  .seed-container {
    padding: 0px;
    width: 100%;
    min-height: 630px;
  }
}

.default-text-black {
  color: #2C2C2C;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

.blogs-slider-prev,
.blogs-slider-next {
  width: 100%;
  height: 100%;
  border: 0px;
  display: flex;
  justify-content: center;
  align-items: center;
  background: transparent;
}

.blogs-slider-prev:focus,
.blogs-slider-next:focus {
  outline: none;
}

.blogs-slider-prev .blog-button-wrapper,
.blogs-slider-next .blog-button-wrapper {
  border: 2px solid #30ab89;
  border-radius: 50px;
  padding: 8px 16px 10px;
  transition: 0.3s ease-in-out;
}

.blogs-slider-prev .blog-button-wrapper img {
  rotate: 180deg;
  transition: 0.3s ease-in-out;
}

.blogs-slider-prev:hover .blog-button-wrapper,
.blogs-slider-next:hover .blog-button-wrapper {
  background-color: #30ab89;
}

.blogs-slider-prev:hover .blog-button-wrapper img,
.blogs-slider-next:hover .blog-button-wrapper img {
  filter: brightness(0) invert(1);
}

.blogs-slider .blog-item {
  height: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.blogs-slider .slick-track {
  display: flex !important;
}

@media (max-width: 991px) {
  .blogs-slider-prev,
  .blogs-slider-next {
    width: auto;
  }
}
/*----------------------
 HEADER STYLE
-----------------------*/
.header-socials {
  line-height: 22px;
  margin-bottom: 0px;
}
.header-socials li {
  padding: 8px;
}
.header-socials li a {
  color: #21c87a;
}

/*-----------------
 LOGO BAR
-------------------*/
.logo-bar {
  padding: 2px 0px 60px;
}

.top-info-block {
  margin-right: 30px;
}
.top-info-block h5,
.top-info-block p {
  margin-bottom: 0px;
}

.icon-block {
  margin-right: 20px;
  color: #21c87a;
  font-size: 40px;
  line-height: 20px;
  font-weight: 400;
}

.top-info-block:last-child {
  margin-right: 0px;
}

.header-bar {
  overflow: visible;
  position: relative;
  padding-bottom: 30px;
}

.main-navigation {
  margin-top: -40px;
}

/*-----------------------
 HOME-3
---------------------------*/
.header-white {
  background: #101010;
  box-shadow: 0 7px 22px rgba(0, 0, 0, 0.08);
  border-radius: 0px;
}

@media (max-width: 992px) {
  .trans-navigation {
    background: #101010;
    box-shadow: 0 7px 22px rgba(0, 0, 0, 0.08);
    border-radius: 0px;
  }
}
/* ... */

